fix: dark mode

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -10,6 +10,7 @@
   --clr-dark-800: hsl(220, 13%, 23%);
   --clr-primary: hsl(207, 26%, 17%);
   --clr-secondary: hsl(209, 23%, 22%);
+  --clr-btn: hsl(209, 23%, 22%);
 
   --border: 0.8rem;
   --bx-shadow: 0px 0px 0px rgba(0, 0, 0, 0);
@@ -27,6 +28,7 @@
   --clr-dark-900: hsla(224, 11%, 19%, 0.151);
   --clr-dark-800: hsla(220, 13%, 23%, 0.151);
   --clr-primary: hsl(0, 0%, 98%);
+  --clr-btn: hsl(0, 0%, 98%);
   --clr-secondary: #ffffff;
 
   --bx-shadow: 0px 0px 10px rgba(58, 58, 58, 0.15);
@@ -307,7 +309,7 @@ a {
       border: none;
       font-size: 1.6rem;
       color: inherit;
-      background: var(--clr-secondary);
+      background: var(--clr-btn);
       
       font-weight: 300;
       padding: 1rem 3.9rem;
